Part_3/simple_app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: will-app-service
  labels:
    app: will
spec:
  type: NodePort
  selector:
      app: will
  ports:
    - protocol: TCP
      port: 8888
      targetPort: 80
